Bugs tagbum. Detalles Publicidad
Former-commit-id: 5b016bd9416a1b4d47f990082046a0e20ccf1271

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -3025,7 +3025,7 @@ a.plus:hover{
 	margin-left: 50px;
 	background-image:url('tbum/purple_arrow_right.png');
 	background-repeat:no-repeat;
-	background-size:25px auto;
+	background-size:26px 26px;
 	background-position:60px 1px;
 	color:#8186c1;
 }
