--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -432,7 +432,7 @@ img.preload.done{
 
 logo{
 	display:inline-block;
-	background:url('tbum/logo-white.png') no-repeat 50%;
+	background:url(tbum/logo-white.png) no-repeat 50%;
 	background-size:100% 100%;
 	width:268px;
 	height:107px;
@@ -1654,7 +1654,7 @@ container .left-panel .menus ul li#cretationTag{
 	-webkit-border-radius:10px;
 	-moz-border-radius:10px;
 	border-radius:10px;
-	margin-right: 2px;
+	margin: 2px;
 
 }
 
@@ -1682,7 +1682,8 @@ container .left-panel .menus ul li#store{
 /* **************************************** */
 container .left-panel .menus ul li,#storeCategory .menus ul li{
 	background-position:5px 3px;
-	padding:8px 0 0 50px;
+	padding:8px 0 0 0;
+	text-indent: 50px;
 	color:#71cbe9;
 	margin:0px;
 	min-height:30px;
@@ -1704,12 +1705,13 @@ container .left-panel .menus ul li#cretationTag a{
 }
 container .left-panel .menus ul li#cretationTag {
 
-	padding:8px 0 0 30px;
+	text-indent: 30px;
 }
+
+
 container .left-panel .menus ul ul,#storeCategory .menus ul ul{
 	display:none;
 	margin-top:10px;
-	list-style:circle;
 }
 container .left-panel .menus ul ul li{
 	padding:0;
@@ -5672,3 +5674,8 @@ container.wrapper .left-panel #adsListPubli td[tipo="17"]{
 	width:26px;
 }
 ul.holder li.bit-box, #apple-list ul.holder li.bit-box{ z-index: 1;}
+container .left-panel .menus ul a,
+container .left-panel .menus ul span{
+
+	margin: 0px; display: block; width: 100%; height: 100%;
+}
