--- a/css/old.css
+++ b/css/old.css
@@ -521,9 +521,10 @@ ul.newGroup > li label.privacy3:before {
 	background-color:#fff;
 	border:1px solid #ccc;
 	font-size:11px;
-	border-radius:5px;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
+	display: block;
+	border-radius:10px;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
 	box-shadow: 2px 2px 2px #000;
 }
 /* End BusinessCard */
