--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -4709,8 +4709,8 @@ container.wrapper .left-panel #adsListPubli td[tipo="2"]{
 container.wrapper .left-panel #adsListPubli td[tipo="3"]{
     background-image:url(tbum/news/imbox.png);
 }
-container.wrapper .left-panell #adsListPubli td[tipo="4"],
-container.wrapper .left-panell #adsListPubli td[tipo="15"]{
+container.wrapper .left-panel #adsListPubli td[tipo="4"],
+container.wrapper .left-panel #adsListPubli td[tipo="15"]{
     background-image:url(tbum/news/comment.png);
 }
 container.wrapper .left-panel #adsListPubli td[tipo="5"],
