news with store
Former-commit-id: 1e51e5192bec38d96208193a79ec83de94194304 [formerly 664c1f2d4e33e344e5922d5bfc78ae9a211c25c3]
Former-commit-id: e5804ac922d1d8f1463a4fd833d794751b46d4a1

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -4731,7 +4731,8 @@ container.wrapper .left-panel #adsListPubli td[tipo="14"]{
     background-image:url(tbum/news/group.png);
 }
 container.wrapper .left-panel #adsListPubli td[tipo="16"],
-container.wrapper .left-panel #adsListPubli td[tipo="17"]{
+container.wrapper .left-panel #adsListPubli td[tipo="17"],
+container.wrapper .left-panel #adsListPubli td[tipo="28"]{
     background-image:url(tbum/news/store.png);
 }
 .divYourFriendsSuggestSeparator{
