--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -1395,7 +1395,7 @@ footer a:hover{ text-decoration:none; }
 .color-a,a.color-a,.color-a a{ color:#ee6323; }
 .color-b,a.color-b,.color-b a{ color:#fddfc6; }
 .color-c,a.color-c,.color-c a,content,content a{ color:#444; }
-.color-d,a.color-d,.color-d a{ color:#adb900; }
+.color-d,a.color-d,.color-d a{ color:#77c574; }
 .color_dolar{ color:#A4D8A2 !important; }
 .color-e,a.color-e,.color-e a{ color:#ccc; }
 .color_green{ color:green !important; }
