--- a/css/jquery-ui.smt.css
+++ b/css/jquery-ui.smt.css
@@ -1,40 +1,3 @@
-/*fuentes*/
-@font-face{
-	font-family:'MyriadPro-Reg';
-	src:local('Myriad Pro'),
-		url('fonts/MyriadPro-Regular.eot'),
-		url('fonts/MyriadPro-Regular.eot?#iefix') format('embedded-opentype'),
-		url('fonts/MyriadPro-Regular.woff') format('woff'),
-		url('fonts/MyriadPro-Regular.ttf') format('truetype'),
-		url('fonts/MyriadPro-Regular.svg') format('svg');
-	font-weight:normal;
-	font-style:normal;
-	font-stretch:normal;
-}
-@font-face{
-	font-family:'MyriadPro-Cond';
-	src:local('Myriad Pro Condensed'),
-		url('fonts/MyriadPro-Cond.eot'),
-		url('fonts/MyriadPro-Cond.eot?#iefix') format('embedded-opentype'),
-		url('fonts/MyriadPro-Cond.woff') format('woff'),
-		url('fonts/MyriadPro-Cond.ttf') format('truetype'),
-		url('fonts/MyriadPro-Cond.svg') format('svg');
-	font-weight:normal;
-	font-style:normal;
-	font-stretch:condensed;
-}
-@font-face{
-	font-family:'MyriadPro-BoldCond';
-	src:url('fonts/MyriadPro-BoldCond.eot'),
-		url('fonts/MyriadPro-BoldCond.eot?#iefix') format('embedded-opentype'),
-		url('fonts/MyriadPro-BoldCond.woff') format('woff'),
-		url('fonts/MyriadPro-BoldCond.ttf') format('truetype'),
-		url('fonts/MyriadPro-BoldCond.svg') format('svg');
-	font-weight:bold;
-	font-style:normal;
-	font-stretch:condensed;
-}
-
 /*general*/
 root{ display:block; }
 body{
@@ -146,3 +109,5 @@ button.smt-button::-moz-focus-inner{ border:0;padding:0; }/*reset extra padding 
 	-moz-border-radius:0px;
 	border-radius:0px;
 }
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #444444; text-decoration: none; }
+.ui-front { z-index: 1000; }
