--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -1047,6 +1047,7 @@ content.resendEmailPassword input[type='button']{
 
 }
 .tag-container [tag] .minitag,
+.tag-container [tag] div.video,
 .tag-container [tag] .tag{
 	border-radius:0.875em;/*28px;*/
 	-moz-border-radius:0.875em;/*28px;*/
@@ -1192,6 +1193,32 @@ content.resendEmailPassword input[type='button']{
 	z-index:1;
 	background:#fff;
 }
+.tag-container [tag] div.video{
+	display: none;
+	position: relative;
+	z-index: 2000;
+	float: left;
+	height: 9.375em;
+	overflow: hidden;
+	width: 100%;
+}
+.tag-container [tag] div.video video,
+.tag-container [tag] div.video iframe{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+.tag-container [tag] div.video .placa{
+	z-index: 2001;
+	position: absolute;
+	top: 0;
+	background: url('smt/placa.png') 50% 50% no-repeat;
+	width: 100%;
+	height: 9.375em;
+}
+
 .searchHash a{
 	color:#f0b070;
 	font-size:13px;
