--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -1023,6 +1023,7 @@ content.resendEmailPassword input[type='button']{
 .tag-container [tag] .tagLink,
 .tag-container [tag] menu{
 	width:20.3125em;/*650px;*/
+	right: 0em;
 }
 .tag-container [tag] .loader,
 .tag-container [tag] .minitag,
@@ -1059,6 +1060,7 @@ content.resendEmailPassword input[type='button']{
 .tag-container [tag] .tag-icons{
 	position:absolute;
 	top:0.4em;
+	width: 92%;
 	left:0.781em;/*25px;*/
 }
 .tag-container [tag] .tag-icons *{
@@ -1145,6 +1147,9 @@ content.resendEmailPassword input[type='button']{
 .tag-container [tag] .extras .vimeo{
 	background-image:url(smt/vimeo.png);
 }
+.tag-container [tag] .extras .local{
+	background-image:url(smt/video.png);
+}
 .tag-container [tag] menu{
 	position:relative;
 	display:block;
@@ -1193,14 +1198,15 @@ content.resendEmailPassword input[type='button']{
 	z-index:1;
 	background:#fff;
 }
+.tag-container [tag] div{ z-index: 2; }
 .tag-container [tag] div.video{
-	display: none;
 	position: relative;
-	z-index: 2000;
+	z-index: 1;
 	float: left;
 	height: 9.375em;
 	overflow: hidden;
 	width: 100%;
+	background-color: black;
 }
 .tag-container [tag] div.video video,
 .tag-container [tag] div.video iframe{
@@ -1217,6 +1223,15 @@ content.resendEmailPassword input[type='button']{
 	background: url('smt/placa.png') 50% 50% no-repeat;
 	width: 100%;
 	height: 9.375em;
+}
+.tag-container [tag] div.video:hover .placa{ z-index: 0; }
+.tag-container [tag] div.videominitag{ 
+	z-index: 1;
+	float: right;
+	width: 2.9em;
+	height: 1.29em;
+	border-radius: 0.2em;
+	display: none;
 }
 
 .searchHash a{
