tag video, no dialog on tag mini if video active
Former-commit-id: ab443f0fde2a70e2d5ff27e0915f93bb519ca01f [formerly 88d613ca9276de09cf2342a130a385e4d4581db4]
Former-commit-id: c39e82b2634e51e490150405b66d3e664d0a4782

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -1216,6 +1216,12 @@ content.resendEmailPassword input[type='button']{
 	top: 0;
 	left: 0;
 }
+.tag-container [tag].ativeVideo .bg,
+.tag-container [tag].ativeVideo .profilepic,
+.tag-container [tag].ativeVideo .profile,
+.tag-container [tag].ativeVideo .loader,
+.tag-container [tag].ativeVideo .tagLink{ display: none !important; }
+.tag-container [tag].ativeVideo .videominitag{ display: block !important; }
 .tag-container [tag] div.video .placa{
 	z-index: 2001;
 	position: absolute;
