ajustes css new tag
Former-commit-id: 4b2392a66c177aab3323c4c43f755f10e731e65a [formerly c400eace3786acf0641d19ab2c985534e95274d2]
Former-commit-id: f8780ec6a4d9dc760fefa0ea81c9dce13f8e239b

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -2031,12 +2031,12 @@ container .mid-pannel menu#carousel{
 	margin:10px 10px 0 0;
 }
 
-#editTag-box #newTagImput #BackgroundAndVideo #backgroundsTag label,#videosTag label,container#creation input[type="text"]{
+#editTag-box #newTagImput #BackgroundAndVideo #backgroundsTag label,#videosTag label,container#creation input[type="text"],container#update input[type="text"]{
 	font-weight:bold;
 	font-size:13px;
 }
 
-container#creation input[type="text"]{
+container#creation input[type="text"],container#update input[type="text"]{
 	background-color: transparent;
 	text-align: center;
 	color:#000;
