action in tag video
Former-commit-id: 754c46cc4b13776bd2a1bd9056e26e3cb2e2c098 [formerly 2e45b78c3bb76bea81cff7c0b064a01735b22248]
Former-commit-id: 945b872fbca966466b64a197a799cfb1f7fff272

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -1224,6 +1224,9 @@ content.resendEmailPassword input[type='button']{
 .tag-container [tag].ativeVideo .profilepic,
 .tag-container [tag].ativeVideo .profile,
 .tag-container [tag].ativeVideo .loader,
+.tag-container [tag].ativeVideo .extras,
+.tag-container [tag].ativeVideo .minitag,
+.tag-container [tag].ativeVideo .tag,
 .tag-container [tag].ativeVideo .tagLink{ display: none !important; }
 .tag-container [tag].ativeVideo .videominitag{ display: block !important; }
 .tag-container [tag] div.video .placa{
