--- a/css/fancybox/jquery.fancybox-1.3.4.css
+++ b/css/fancybox/jquery.fancybox-1.3.4.css
@@ -35,7 +35,7 @@
 	left: 0;
 	width: 40px;
 	height: 480px;
-	background-image: url('../../img/fancybox/fancybox.png');
+	background-image: url('img/fancybox.png');
 }
 
 #fancybox-overlay {
@@ -100,7 +100,7 @@
 	right: -15px;
 	width: 30px;
 	height: 30px;
-	background: transparent url('../../img/fancybox/close.png');
+	background: transparent url('img/close.png');
 	background-repeat: no-repeat;
 	cursor: pointer;
 	z-index: 1103;
@@ -139,7 +139,7 @@
 	width: 40px;
 	cursor: pointer;
 	outline: none;
-	background: transparent url('../../img/fancybox/blank.gif');
+	background: transparent url('img/blank.gif');
 	z-index: 1102;
 	display: none;
 }
@@ -167,14 +167,14 @@
 }
 
 #fancybox-left-ico {
-	background-image: url('../../img/fancybox/left.png');
+	background-image: url('img/left.png');
 	background-repeat: no-repeat;
 	height: 50px;
 	width: 50px;
 }
 
 #fancybox-right-ico {
-	background-image: url('../../img/fancybox/right.png');
+	background-image: url('img/right.png');
 	background-repeat: no-repeat;
 	height: 50px;
 	width: 50px;
@@ -207,13 +207,13 @@
 	top: -20px;
 	left: 0;
 	width: 100%;
-	background-image: url('../../img/fancybox/fancybox-x.png');
+	background-image: url('img/fancybox-x.png');
 }
 
 #fancybox-bg-ne {
 	top: -20px;
 	right: -20px;
-	background-image: url('../../img/fancybox/fancybox.png');
+	background-image: url('img/fancybox.png');
 	background-position: -40px -162px;
 }
 
@@ -221,14 +221,14 @@
 	top: 0;
 	right: -20px;
 	height: 100%;
-	background-image: url('../../img/fancybox/fancybox-y.png');
+	background-image: url('img/fancybox-y.png');
 	background-position: -20px 0px;
 }
 
 #fancybox-bg-se {
 	bottom: -20px;
 	right: -20px;
-	background-image: url('../../img/fancybox/fancybox.png');
+	background-image: url('img/fancybox.png');
 	background-position: -40px -182px;
 }
 
@@ -236,14 +236,14 @@
 	bottom: -20px;
 	left: 0;
 	width: 100%;
-	background-image: url('../../img/fancybox/fancybox-x.png');
+	background-image: url('img/fancybox-x.png');
 	background-position: 0px -20px;
 }
 
 #fancybox-bg-sw {
 	bottom: -20px;
 	left: -20px;
-	background-image: url('../../img/fancybox/fancybox.png');
+	background-image: url('img/fancybox.png');
 	background-position: -40px -142px;
 }
 
@@ -251,13 +251,13 @@
 	top: 0;
 	left: -20px;
 	height: 100%;
-	background-image: url('../../img/fancybox/fancybox-y.png');
+	background-image: url('img/fancybox-y.png');
 }
 
 #fancybox-bg-nw {
 	top: -20px;
 	left: -20px;
-	background-image: url('../../img/fancybox/fancybox.png');
+	background-image: url('img/fancybox.png');
 	background-position: -40px -122px;
 }
 
@@ -290,7 +290,7 @@
 
 #fancybox-title-over {
 	padding: 10px;
-	background-image: url('../../img/fancybox/fancy_title_over.png');
+	background-image: url('imgfancy_title_over.png');
 	display: block;
 }
 
@@ -314,7 +314,7 @@
 
 #fancybox-title-float-left {
 	padding: 0 0 0 15px;
-	background: url('../../img/fancybox/fancybox.png') -40px -90px no-repeat;
+	background: url('img/fancybox.png') -40px -90px no-repeat;
 }
 
 #fancybox-title-float-main {
@@ -322,12 +322,12 @@
 	line-height: 29px;
 	font-weight: bold;
 	padding: 0 0 3px 0;
-	background: url('../../img/fancybox/fancybox-x.png') 0px -40px;
+	background: url('img/fancybox-x.png') 0px -40px;
 }
 
 #fancybox-title-float-right {
 	padding: 0 0 0 15px;
-	background: url('../../img/fancybox/fancybox.png') -55px -90px no-repeat;
+	background: url('img/fancybox.png') -55px -90px no-repeat;
 }
 
 /* IE6 */
