Previiew de tags en busqueda general
Former-commit-id: 5f08e2a6cfd9affd8acafee8d275b255a07f4b91 [formerly 17e2e1f2c54dfd30bc413edda6a132cca0fdac6f]
Former-commit-id: 6c78865da4f6d281bdee76fee8fdb3e20d366883

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -5190,16 +5190,20 @@ container #pageNews .news-wrapper #news-here div[tipo="29"]{
 	color:#faf8f8;
 	background:#FF8A28;
 }
-#searchAll #contentHash #msghashclick{
+#searchAll #msghashclick{
 	margin:5px 0;padding:9px 0;font-size:11px;
 }
-#searchAll #contentHash #msghashclick #hashClick{
+#searchAll #msghashclick .hashClick{
 	color:#f82;
 	text-decoration:underline;
 	cursor:pointer
 }
-#searchAll #contentHash #msghashclick #hashClick:hover{
+#searchAll #msghashclick .hashClick:hover{
 	text-decoration:none
+}
+#searchAll #group-box, #searchAll .group-details {
+	border: none;
+	min-height: inherit;
 }
 #tabs-4 .btnFriendsSearch input{
 	font-size:10px
