Cambiando seemytag por tagbum
Former-commit-id: 9ccdfc88c500a1c3d622e3016a85352ae3c3c030 [formerly 27e34a163afa73e97410cc3f35e6047a96440fdd]
Former-commit-id: c5b15f1980f7f627261f5965c47294528650329c

--- a/app/css/jquery.mobile.custom.css
+++ b/app/css/jquery.mobile.custom.css
@@ -150,7 +150,7 @@
 }
 /*Menu end*/
 
-/* estilos personalizados para seemytag */
+/* estilos personalizados para tagbum */
 .ui-page:not(.default){ 	overflow:hidden; }
 
 .ui-page .ui-content{
