--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -74,8 +74,8 @@ span.iconLogin{
 	background-position:0 0;
 	background-size:20px 14px;
 	width:20px;height:14px;
-	padding:0 3px;
 	position:relative;top:2px;
+	margin-right:5px;
 }
 .prinTitleActive>.iconLogin,a:hover>.iconLogin{
 	background-image:url('tbum/white_arrow_right.png');
