arreglos en preview de tag
Former-commit-id: 999c159dcef285263b857461a296c271107b9e25 [formerly 4f713ac3edcc00f89847965a7967341b16d21922]
Former-commit-id: 9d8ce13025d6d2c78153e26cafcd50ba61093ad7

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -1032,6 +1032,9 @@ content.resendEmailPassword input[type='button']{
 	margin:0 0 0.313em;/*0 0 10px;*/
 	text-align:left;
 }
+.tag-container .template{
+	background-position:0px center;
+}
 .tag-container,
 .tag-container .template,
 .tag-container [tag],
